public class Basement extends House {
    TextUI ui = new TextUI();

    public Basement(){

    }

    public void Basement(){

    }
}
