public class Bathroom {
    TextUI ui = new TextUI();

    public Bathroom(){

    }

    public void Bathroom(){

    }
}


