public class Bedroom extends House {
    TextUI ui = new TextUI();

    public Bedroom(){

    }

    public void Bedroom(){

    }
}


