public class Kitchen extends House {

    public Kitchen(){

    }

    public void Kitchen(){

    }
}
