public class Livingroom extends House {
    TextUI ui = new TextUI();

    public Livingroom(){

    }

    public void Livingroom(){

    }
}


